@@ -1,4 +1,5 @@
 2007-07-13:
+	* src/minikafs.c: use the error_message wrapper.
 	* src/tokens.c: use the error_message wrapper.
 	* src/init.c: use the error_message wrapper.
 	* src/auth.c: check for NULL or empty passwords.
